--- a/pom.xml
+++ b/pom.xml
@@ -132,5 +132,10 @@
             <artifactId>dropwizard-swagger</artifactId>
             <version>1.3.12-1</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.2.6.Final</version>
+        </dependency>
     </dependencies>
 </project>
